@@ -40,6 +40,7 @@ let default_rpath = ""
 let mksharedlibrpath = ""
 let ar = boot_cannot_call "ar"
 let supports_shared_libraries = false
+let native_dynlink = false
 let mkdll = native_pack_linker
 let mkexe = native_pack_linker
 let mkmaindll = native_pack_linker
@@ -50,6 +51,7 @@ let windows_unicode = false
 let flat_float_array = true
 let function_sections = false
 let afl_instrument = false
+let native_compiler = false
 let architecture = "none"
 let model = "default"
 let system = "unknown"
